--- a/www/tpl/user.signup.html.twig
+++ b/www/tpl/user.signup.html.twig
@@ -1,37 +1,37 @@
 {% extends 'main.html.twig' %}
 
-{% block title %}{{ settings.user_signup_title }} @ {{ sys.system.name }}{% endblock %}
+{% block title %}{{ localizations.user_signup_title }} @ {{ sys.system.name }}{% endblock %}
 
 {% block body %}
     <main class="form-signin">
         <form method="post" action="/login">
             <i class="fa fa-user fa-5x"></i>
-            <h1 class="h3 mb-3 fw-normal">{{ settings.user_signup_title }}</h1>
+            <h1 class="h3 mb-3 fw-normal">{{ localizations.user_signup_title }}</h1>
             <p>
-                {{ settings.user_signup_form_note }}
+                {{ localizations.user_signup_form_note }}
             </p>
 
             {% if error %}
                 <div class="alert alert-danger">
                     <i class="fa fa-warning"></i>
-                    {{ settings.user_login_error }}
+                    {{ localizations.user_login_error }}
                 </div>
             {% endif %}
 
             <div class="form-floating">
                 <input type="text" value="{{ login }}" class="form-control" id="floatingInput" name="user"
-                       placeholder="{{ settings.user_signup_form_title_username }}">
-                <label for="floatingInput">{{ settings.user_signup_form_title_username }}</label>
+                       placeholder="{{ localizations.user_signup_form_title_username }}">
+                <label for="floatingInput">{{ localizations.user_signup_form_title_username }}</label>
             </div>
             <div class="form-floating mt-2">
-                <input {% if error %}autofocus {% endif %}type="password" class="form-control" name="pass"
-                       id="floatingPassword" placeholder="{{ settings.user_signup_form_title_password }}">
-                <label for="floatingPassword">{{ settings.user_signup_form_title_password }}</label>
+                <input type="password" class="form-control" name="pass"
+                       id="floatingPassword" placeholder="{{ localizations.user_signup_form_title_password }}">
+                <label for="floatingPassword">{{ localizations.user_signup_form_title_password }}</label>
             </div>
             <div class="form-floating">
-                <input {% if error %}autofocus {% endif %}type="password" class="form-control" name="pass2"
-                       id="floatingPassword2" placeholder="{{ settings.user_signup_form_title_password_repeat }}">
-                <label for="floatingPassword2">{{ settings.user_signup_form_title_password_repeat }}</label>
+                <input type="password" class="form-control" name="pass2"
+                       id="floatingPassword2" placeholder="{{ localizations.user_signup_form_title_password_repeat }}">
+                <label for="floatingPassword2">{{ localizations.user_signup_form_title_password_repeat }}</label>
             </div>
             <div class="checkbox mb-3">
                 <label>
@@ -39,7 +39,7 @@
                 </label>
             </div>
             <button class="w-100 btn btn-lg btn-primary"
-                    type="submit">{{ settings.user_login_form_title_signup_button }}</button>
+                    type="submit">{{ localizations.user_login_form_title_signup_button }}</button>
         </form>
     </main>
 {% endblock %}
