--- a/www/tpl/terms.html.twig
+++ b/www/tpl/terms.html.twig
@@ -1,12 +1,12 @@
 {% extends 'main.html.twig' %}
 
-{% block title %}{{ settings.terms_title }} @ {{ sys.system.name }}{% endblock %}
+{% block title %}{{ localizations.terms_title }} @ {{ sys.system.name }}{% endblock %}
 
 {% block body %}
     <div class="row">
         <div class="col-lg-12">
             <div class="page-header">
-                <h1>{{ settings.terms_title }}</h1>
+                <h1>{{ localizations.terms_title }}</h1>
             </div>
         </div>
     </div>
@@ -15,7 +15,7 @@
         <div class="col-md-12">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-3 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                    {{ settings.terms|nl2br }}
+                    {{ localizations.terms|nl2br }}
                 </div>
             </div>
         </div>
