--- a/www/tpl/user.list.html.twig
+++ b/www/tpl/user.list.html.twig
@@ -1,12 +1,12 @@
 {% extends 'main.html.twig' %}
 
-{% block title %}{{ settings.user_list_title }} @ {{ sys.system.name }}{% endblock %}
+{% block title %}{{ localizations.user_list_title }} @ {{ sys.system.name }}{% endblock %}
 
 {% block body %}
     <div class="row">
         <div class="col-lg-12">
             <div class="page-header">
-                <h1>{{ settings.user_list_title }} ({{ userCount }})</h1>
+                <h1>{{ localizations.user_list_title }} ({{ userCount }})</h1>
             </div>
         </div>
     </div>
@@ -16,15 +16,15 @@
             <div class="row mb-2">
                 <div class="col-md-12">
                     <div class="card border-success mb-3">
-                        <div class="card-header">{{ settings.user_title_admin }}</div>
+                        <div class="card-header">{{ localizations.user_title_admin }}</div>
                         <div class="card-body">
                             <h4 class="card-title">{{ usr.login }}</h4>
-                            <p class="card-text">{{ usr.info }}<br>{{ settings.user_title_last_login }}:
+                            <p class="card-text">{{ usr.info }}<br>{{ localizations.user_title_last_login }}:
                                 <span class="nfp_ts" data-ts="{{ usr.ts_last_login }}"
                                       title="{{ usr.ts_last_login|date("d.m.Y H:i:s") }}">{{ usr.ts_last_login|date("d.m.Y H:i:s") }}</span>
                             </p>
                             <a class="btn btn-primary" href="/message/send?to={{ usr.login }}"><i
-                                        class="fa fa-envelope"></i> {{ settings.user_profile_button_send_message }}</a>
+                                        class="fa fa-envelope"></i> {{ localizations.user_profile_button_send_message }}</a>
                         </div>
                     </div>
                 </div>
@@ -36,20 +36,20 @@
                         <div class="col p-4 d-flex flex-column position-static">
                             <strong>{{ usr.login }} </strong>
                             <p class="card-text mb-1">{{ usr.info }}</p>
-                            <div class="mb-1 text-muted">{{ settings.user_title_last_login }}:
+                            <div class="mb-1 text-muted">{{ localizations.user_title_last_login }}:
                                 {% if not usr.ts_last_login %}
-                                    {{ settings.user_title_not_logged_in }}
+                                    {{ localizations.user_title_not_logged_in }}
                                 {% else %}
                                     <span class="nfp_ts" data-ts="{{ usr.ts_last_login }}"
                                           title="{{ usr.ts_last_login|date("d.m.Y H:i:s") }}">{{ usr.ts_last_login|date("d.m.Y H:i:s") }}</span>
                                 {% endif %}
                                 <div class="mt-3">
                                     <a class="btn btn-primary" href="/message/send?to={{ usr.login }}"><i
-                                                class="fa fa-envelope"></i> {{ settings.user_profile_button_send_message }}
+                                                class="fa fa-envelope"></i> {{ localizations.user_profile_button_send_message }}
                                     </a>
                                     &nbsp;
                                     <a class="btn btn-primary" href="/message/admin?rel={{ usr.login }}&type=complaint"><i
-                                                class="fa fa-envelope"></i> {{ settings.user_profile_button_complain }}
+                                                class="fa fa-envelope"></i> {{ localizations.user_profile_button_complain }}
                                     </a>
                                 </div>
                             </div>
