--- a/www/tpl/board.html.twig
+++ b/www/tpl/board.html.twig
@@ -1,6 +1,11 @@
 {% extends 'main.html.twig' %}
+{% import 'macros/macros.board.html.twig' as boardMacro %}
+{% import 'macros/macros.utils.html.twig' as utilsMacro %}
 
 {% block title %}{{ localizations.boards_title }} @ {{ sys.system.name }}{% endblock %}
+
+{% block header %}
+{% endblock %}
 
 {% block body %}
     <div class="row">
@@ -11,29 +16,15 @@
         </div>
     </div>
 
-    <div>
-        {% for board in boards %}
-            <h2>#{{ board.board.id }}: {{ board.board.title }}</h2>
-            <em>{{ board.board.status }}</em>
-            <hr>
+    {{ utilsMacro.textHeader(localizations.admin_name, localizations.board_intro) }}
 
-            {% for post in board.posts %}
-                <div>
-                    {{ post.title }}<br>
-                    {{ post.message }}<br>
-                    {{ post.status }}<br>
-                    {{ post.ts|date("d.m.Y H:i:s") }}<br>
-                    {{ post.user_login }}<br>
-                    {{ post.user_status }}<br>
-                    {{ post.user_info }}<br>
-                    {{ post.user_id }}
-                </div>
-                <br>
-            {% endfor %}
+    {% for board in boards %}
+        {# {{ board.board.id }}: {{ board.board.title }} #}
+        {# {{ board.board.status }} #}
+        {{ boardMacro.board(board.posts, localizations) }}
+    {% endfor %}
 
-            <br>
-            Total: {{ board.count }}
+{% endblock %}
 
-        {% endfor %}
-    </div>
+{% block footer %}
 {% endblock %}
