--- a/www/tpl/files.html.twig
+++ b/www/tpl/files.html.twig
@@ -1,4 +1,5 @@
 {% extends 'main.html.twig' %}
+{% import 'macros/macros.utils.html.twig' as utilsMacro %}
 
 {% block title %}{{ localizations.files_title }} @ {{ sys.system.name }}{% endblock %}
 
@@ -7,6 +8,112 @@
         <div class="col-lg-12">
             <div class="page-header">
                 <h1>{{ localizations.files_title }}</h1>
+            </div>
+        </div>
+    </div>
+
+    {{ utilsMacro.textHeader(localizations.admin_name, localizations.files_intro) }}
+
+    <div class="row">
+        <div class="bs-component">
+            <div class="accordion" id="nfpAccordionFiles">
+
+                {% set i = 1 %}
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading{{ i }}">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse{{ i }}" aria-expanded="true" aria-controls="collapse{{ i }}">
+                            {{ localizations.files_apk_title }}
+                        </button>
+                    </h2>
+                    <div id="collapse{{ i }}" class="accordion-collapse collapse show" aria-labelledby="heading{{ i }}"
+                         data-bs-parent="#nfpAccordionFiles">
+                        <div class="accordion-body">
+                            {% set j = 0 %}
+                            <ul class="nfpList">
+                                {% for app in files.apk %}
+                                    {% set j = j + 1 %}
+                                    <li>
+                                        <i class="fa fa-android"></i> &nbsp;
+                                        <a target="_blank"
+                                           href="/download/public/files/apk/{{ app.file }}"
+                                           class="nfpAppTitle">{{ app.data.name }}</a>
+                                        ({{ app.sizeHuman }})
+                                        <br>
+                                        {{ app.data.shortDesc }}
+                                        <br>
+                                        <a href="#" class="hiddenInfoSwitch"
+                                           data-el="hiddenFileInfo_{{ j }}">{{ localizations.files_app_into_text_showmore }}
+                                            <i class="fa fa-arrow-down"></i>
+                                        </a>
+                                        <div class="hiddenInfo" id="hiddenFileInfo_{{ j }}">
+                                            <small>
+                                                {{ app.data.longDesc|nl2br }}
+                                            </small>
+                                        </div>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+
+                {% set i = i + 1 %}
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading{{ i }}">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse{{ i }}" aria-controls="collapse{{ i }}">
+                            {{ localizations.files_osm_title }}
+                        </button>
+                    </h2>
+                    <div id="collapse{{ i }}" class="accordion-collapse collapse" aria-labelledby="heading{{ i }}"
+                         data-bs-parent="#nfpAccordionFiles">
+                        <div class="accordion-body">
+                            {% set j = 0 %}
+                            <ul class="nfpList">
+                                {% for app in files.osm %}
+                                    {% set j = j + 1 %}
+                                    <li>
+                                        <i class="fa fa-map-marker"></i> &nbsp;
+                                        <a target="_blank"
+                                           href="/download/public/files/osm/{{ app.file }}">{{ app.title }}</a>
+                                        ({{ app.sizeHuman }})
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+
+                {% set i = i + 1 %}
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading{{ i }}">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse{{ i }}" aria-controls="collapse{{ i }}">
+                            {{ localizations.files_kiwix_title }}
+                        </button>
+                    </h2>
+                    <div id="collapse{{ i }}" class="accordion-collapse collapse" aria-labelledby="heading{{ i }}"
+                         data-bs-parent="#nfpAccordionFiles">
+                        <div class="accordion-body">
+                            {% set j = 0 %}
+                            <ul class="nfpList">
+                                {% for app in files.kiwix %}
+                                    {% set j = j + 1 %}
+                                    <li>
+                                        <i class="fa fa-map-marker"></i> &nbsp;
+                                        <a target="_blank"
+                                           href="/download/kiwix/{{ app.file }}">{{ app.title }}</a>
+                                        ({{ app.sizeHuman }})
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
