--- a/www/htdocs/css/notfallpunkt.css
+++ b/www/htdocs/css/notfallpunkt.css
@@ -157,3 +157,8 @@ body.page-chat #chat #chatBox ul#chatMsgList .cm {
     font-weight:bold;
     font-size:1rem;
 }
+
+body.page-board #boardForm  {
+    /*background-color: var(--bs-light) !important;*/
+    padding:0.6rem;
+}
