Reacting to Android captive portal URL

--- a/www/tpl/index.html.twig
+++ b/www/tpl/index.html.twig
@@ -99,4 +99,8 @@
         </div>
     {% endif %}
 
+    {% if isCaptivePortalUrl %}
+        <p>IS_CAPTIVE_PORTAL_</p>
+    {% endif %}
+
 {% endblock %}
